--- a/trunk/src/label.properties
+++ b/trunk/src/label.properties
@@ -278,3 +278,6 @@ unpack_create_dir=Unpack into a directory with archive file name.
 unpack_overwrite_dialog=Shows an overwrite dialog.
 
 use_migemo=Uses migemo.
+inactive=Not focused
+cursor_requires_focus=Not shows the cursor when inactive.
+change_color_with_focus=Changes character color when inactive.
