--- a/trunk/src/label.properties
+++ b/trunk/src/label.properties
@@ -204,6 +204,7 @@ use_proxy=Use a proxy server
 proxy_host=Host name
 proxy_port=Port number
 filesystem=File system
+ftp_encoding=FTP encoding
 
 rename_to_upper=To upper case
 rename_to_lower=To lower case
@@ -281,3 +282,5 @@ use_migemo=Uses migemo.
 inactive=Not focused
 cursor_requires_focus=Not shows the cursor when inactive.
 change_color_with_focus=Changes character color when inactive.
+
+filter_regex=File filter regex(line breaks will be replaced with "|")
