--- a/trunk/src/label.properties
+++ b/trunk/src/label.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 beta12 by Shunji.Y >>
+title=<< jFD2 beta13 by Shunji.Y >>
 
 ok=OK
 cancel=Cancel
@@ -142,6 +142,7 @@ user_conf_dir=User configulation directory
 path=Path
 path_notice=<html>Surround the file name with double quart if the file name contains spaces.<br>For example:<br>c:\\Program Files\\XXXEditor\\xxxeditor.exe<br>\u3000\u3000\u3000should be<br>"c:\\Program Files\\XXXEditor\\xxxeditor.exe"</html>
 shell_notice=<html>$C : The command<br>$Q : The command with double quart.<br>$CQ : The command with double quart(when the command contains a space)<br>Each lines are executed as independent elements.</html>
+appshell_notice=<html>$A \uff1a Application path<br>$P : Parameters sptit by spaces.<br>$PQ : Parameters surrounded by double quates sprit by spaces.<br>$PN : Parameters sptit by new lines.<br>$PNQ : Parameters surrounded by double quates sptit by spaces.<br></html>
 grep_encode=GREP command default encode
 grep_all_encode=GREP command encodes
 etc=Etc
@@ -192,6 +193,7 @@ next_frame=Select the next window
 extension_mapper=Extension mappping command
 
 choose_from_quickaccess=Select from QuickAccess (Alt+Q)
+choose_from_tree=Select with a tree\uff08Alt+T)
 
 transfer_mode=Transfer mode
 depends_extension=Depends on file extension
@@ -284,3 +286,11 @@ cursor_requires_focus=Not shows the cursor when inactive.
 change_color_with_focus=Changes character color when inactive.
 
 filter_regex=File filter regex(line breaks will be replaced with "|")
+
+look_and_feel=Look and Feel(Requires restart)
+platform_native=Platform native
+
+min_column_width=Minimum column width (for auto column ajustment mode)
+
+graphic_viewer_mouse_button_operate=Shows a next or previous image when mouse button pressed on the graphic viewer.
+tree=Tree
