--- a/trunk/src/message.properties
+++ b/trunk/src/message.properties
@@ -32,7 +32,7 @@ failed_init_plugin=Failed to initialize a plugin.
 message_pack=Input the archive name.
 message_unpack=Input the directory to extract to.
 unpack_dest_is_file=A file which has same name exists.
-input_editor_path=<html>Input the path of a text editor which jFD2 uses.<br>Surround the path with " if the path of editor or shell contains the space.<br>Example <br>c:\\Program Files\\XXXEditor\\xxxeditor.exe<br>Å@Å@Å@must be<br><b>"c:\\Program Files\\XXXEditor\\xxxeditor.exe"</b></html>
+input_editor_path=<html>Input the path of a text editor which jFD2 uses.<br>Surround the path with " if the path of editor or shell contains the space.<br>Example <br>c:\\Program Files\\XXXEditor\\xxxeditor.exe<br>\u3000\u3000\u3000must be<br><b>"c:\\Program Files\\XXXEditor\\xxxeditor.exe"</b></html>
 input_shell=Input the path of a command shell for files.
 input_app_shell=Input the path of a command shell for applications.
 input_shortcut_name=Input the shortcut name.
@@ -57,3 +57,4 @@ smartfilelist_exists=<html>Creating a smart file list.<br>The smart file list al
 empty_file_source=Please fill all file sources.
 message_delete_filelist_file=<html>Removing files from a file list.<br>(File entity won't be deleted)</html>
 input_slideshow_interval=Input slideshow interval (seconds)
+fail_set_permission=Failed to set permissions.
