--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -11,13 +11,12 @@
 	<classpathentry kind="lib" path="lib/groovy/asm-analysis-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/groovy/asm-tree-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/groovy/asm-util-2.2.jar"/>
-	<classpathentry kind="lib" path="lib/groovy/groovy-1.1-rc-2.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/ant.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/commons-logging.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/commons-logging-api.jar"/>
-	<classpathentry kind="lib" path="lib/vfs/commons-net-1.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/vfs/commons-net-1.4.1.jar" sourcepath="D:/lib/commons-net-1.4.1/src"/>
 	<classpathentry kind="lib" path="lib/vfs/dummyui.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/fastfile.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/h2.jar"/>
@@ -28,8 +27,9 @@
 	<classpathentry kind="lib" path="lib/vfs/jlha.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/saxpath.jar"/>
 	<classpathentry kind="lib" path="lib/vfs/jdom.jar"/>
-	<classpathentry kind="lib" path="lib/migemo-0.006.jar"/>
-	<classpathentry kind="lib" path="lib/HtmlTablePanel.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/VFS"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/TableLayout"/>
+	<classpathentry kind="lib" path="lib/groovy/groovy-1.5.4.jar"/>
+	<classpathentry kind="lib" path="lib/migemo.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
