--- a/trunk/src/label.properties
+++ b/trunk/src/label.properties
@@ -142,7 +142,7 @@ user_conf_dir=User configulation directory
 path=Path
 path_notice=<html>Surround the file name with double quart if the file name contains spaces.<br>For example:<br>c:\\Program Files\\XXXEditor\\xxxeditor.exe<br>\u3000\u3000\u3000should be<br>"c:\\Program Files\\XXXEditor\\xxxeditor.exe"</html>
 shell_notice=<html>$C : The command<br>$Q : The command with double quart.<br>$CQ : The command with double quart(when the command contains a space)<br>Each lines are executed as independent elements.</html>
-appshell_notice=<html>$A \uff1a Application path<br>$P : Parameters sptit by spaces.<br>$PQ : Parameters surrounded by double quates sprit by spaces.<br>$PN : Parameters sptit by new lines.<br>$PNQ : Parameters surrounded by double quates sptit by spaces.<br></html>
+appshell_notice=<html>$A \uff1a Application path<br>$B : Parameters sptit by spaces.<br>$BQ : Parameters surrounded by double quates sprit by spaces.<br>$BN : Parameters sptit by new lines.<br>$BNQ : Parameters surrounded by double quates sptit by spaces.<br></html>
 grep_encode=GREP command default encode
 grep_all_encode=GREP command encodes
 etc=Etc
