--- a/trunk/src/label.properties
+++ b/trunk/src/label.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 beta14 by Shunji.Y >>
+title=<< jFD2 beta15 by Shunji.Y >>
 
 ok=OK
 cancel=Cancel
@@ -52,6 +52,7 @@ open_new_tab=Open new tab(Left)
 open_sub_tab=Open new tab(Right)
 new_window=Open new window
 exit=Exit
+exit_all=Exit all
 edit=Edit
 mark_menu=Mark
 mark_this_file=Mark this file
