--- a/trunk/src/message.properties
+++ b/trunk/src/message.properties
@@ -43,7 +43,7 @@ failed_to_execute=Failed to execute a command.
 input_option=Input option.
 input_console_command=Input a command to open console.
 update_config_files=<html>jFD2 is updating config files below.<br><br>{0}<br>*Old files will be copied as a backup file.<BR>jFD2 can work without updating config files, however you can't use new functions.<br></html>
-failed_to_install_config_file=<html>Failed to install configulation files. jFD2 will exits.<br>Please delete the configulation directory(~/.jfd2) and try again please.</html>
+failed_to_install_config_file=<html>Failed to install configulation files. jFD2 will exits<br>Please delete the configulation directory(~/.jfd2) and try again please.</html>
 message_input_extension=Input the extension.
 message_input_rename_pattern=<html>Input the filename patttern.<br><pre>$mN : Sequence number("m" means a digit. Can be omitted.)\n$F : File name\n$f : File name without the extension\n$E : Extension with a dot.\n$X : Extension without a dot.\n</pre></html>
 message_repeated_filename=File name is repeated.
@@ -58,3 +58,4 @@ empty_file_source=Please fill all file sources.
 message_delete_filelist_file=<html>Removing files from a file list.<br>(File entity won't be deleted)</html>
 input_slideshow_interval=Input slideshow interval (seconds)
 fail_set_permission=Failed to set permissions.
+broken_tab_config=<html>The config file is broken. jFD2 will exit.<br>Please delete the configulation directory(~/.jfd2) and try again please.</html>
