--- a/trunk/src/label.properties
+++ b/trunk/src/label.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 beta15 by Shunji.Y >>
+title=<< jFD2 beta16 by Shunji.Y >>
 
 ok=OK
 cancel=Cancel
@@ -295,3 +295,6 @@ min_column_width=Minimum column width (for auto column ajustment mode)
 
 graphic_viewer_mouse_button_operate=Shows a next or previous image when mouse button pressed on the graphic viewer.
 tree=Tree
+text_viewer_editable=Editable text viewer(It avoids a Linux JRE bug)
+
+console=Console
