beta17向けベータ17

--- a/trunk/src/label.properties
+++ b/trunk/src/label.properties
@@ -59,6 +59,7 @@ mark_this_file=Mark this file
 mark-all=Mark all
 mark-reverse=Mark Rreverse
 find=Find files
+find_tag=Find files by tag
 grep=Grep
 view=View
 incremental_search=Incremental Search
@@ -267,8 +268,8 @@ file_source=File Source
 search_condtion=Search Condition
 max_count=Maximum number (Default is infinity)
 
-register_smart_filelist=Register a smart file list
-register_filelist=Register a file list
+register_smart_filelist=Register a smart directory
+register_filelist=Register a virtual directory
 change_dot_file_visible=Change hidden files visibility
 
 find_condition=File name contains
@@ -298,3 +299,24 @@ tree=Tree
 text_viewer_editable=Editable text viewer(It avoids a Linux JRE bug)
 
 console=Console
+
+
+permission=Permission
+timestamp=Timestamp
+
+permission_readable=Read
+permission_writable=Write
+permission_executable=Execute
+
+access_normal=Normal
+access_group=Group
+access_owner=Owner
+
+tag=Tag
+add_tag=Add Tag
+
+clean_tag_db=Clean unnecessary tags.
+execute=Execute
+
+attribute=File Attribute
+clean_tag_db=Tag Database Cleaning
