--- a/trunk/src/message.properties
+++ b/trunk/src/message.properties
@@ -49,13 +49,17 @@ message_input_rename_pattern=<html>Input the filename patttern.<br><pre>$mN : Se
 message_repeated_filename=File name is repeated.
 delete_failed=<html>Failed to delete <br>{0}</html>
 opens_as_smart_file_list=Opens with a smart file list editor
-input_filelist_name=<html>Creating a file list of selected files.<br>Input the file list name.</html>
-smartfilelist_exists=<html>The file list already exists.<br>Do you want to append files?</html>
-filelist_created=The file list was created successfully.
-input_smartfilelist_name=Input the smart file list name.
-smartfilelist_exists=<html>Creating a smart file list.<br>The smart file list already exists.</html>
+input_filelist_name=<html>Creating a virtual directory of selected files.<br>Input the virtual directory name.</html>
+smartfilelist_exists=<html>The virtual directory already exists.<br>Do you want to append files?</html>
+filelist_created=The virtual directory was created successfully.
+input_smartfilelist_name=Input the smart directory name.
+smartfilelist_exists=<html>Creating a smart directory.<br>The smart directory already exists.</html>
 empty_file_source=Please fill all file sources.
-message_delete_filelist_file=<html>Removing files from a file list.<br>(File entity won't be deleted)</html>
+message_delete_filelist_file=<html>Removing files from a virtual directory.<br>(File entity won't be deleted)</html>
 input_slideshow_interval=Input slideshow interval (seconds)
 fail_set_permission=Failed to set permissions.
 broken_tab_config=<html>The config file is broken. jFD2 will exit.<br>Please delete the configulation directory(~/.jfd2) and try again please.</html>
+message_tag_find=Input a tag name to find.('*' is wild-card)
+input_new_tag=Input tag name
+message_clean_tag_db=Cleaning the file tag database and remove unneccessary tags.
+message_clean_tag_db_finished=Finishe..
