--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -1,36 +1,37 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/main/java"/>
-  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
-  <classpathentry kind="src" path="src/test/java" output="target/test-classes"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/ant/ant/1.7.1/ant-1.7.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/ant/ant-launcher/1.7.1/ant-launcher-1.7.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
-  <classpathentry kind="var" path="M2_REPO/asm/asm/2.2.3/asm-2.2.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/asm/asm-analysis/2.2.3/asm-analysis-2.2.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/asm/asm-tree/2.2.3/asm-tree-2.2.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/asm/asm-util/2.2.3/asm-util-2.2.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.2/commons-codec-1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-httpclient/commons-httpclient/3.1/commons-httpclient-3.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-net/commons-net/2.0/commons-net-2.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-vfs/commons-vfs/1.0/commons-vfs-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/fastfile/fastfile/1.0/fastfile-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/nullfish/filefish/20090201/filefish-20090201.jar"/>
-  <classpathentry kind="var" path="M2_REPO/l2fprod/fontchooser/1.0/fontchooser-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/codehaus/groovy/groovy/1.6-RC-2/groovy-1.6-RC-2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/h2database/h2/1.1.107/h2-1.1.107.jar"/>
-  <classpathentry kind="var" path="M2_REPO/nullfish/html-table-panel/1.1/html-table-panel-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/innosystec/java-unrar/0.2/java-unrar-0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/samba/jcifs/jcifs/1.2.19/jcifs-1.2.19.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jdom/jdom/1.1/jdom-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javazoom/jlayer/1.0/jlayer-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/jlha/jlha/1.0/jlha-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/jline/jline/0.9.94/jline-0.9.94.jar"/>
-  <classpathentry kind="var" path="M2_REPO/monazilla/jmigemo/0.1/jmigemo-0.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/mozilla/juniversalchardet/1.0.2/juniversalchardet-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/mac-dummy/mac-dummy/1.0/mac-dummy-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/oro/oro/2.0.8/oro-2.0.8.jar"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/ant/ant/1.7.1/ant-1.7.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/ant/ant-launcher/1.7.1/ant-launcher-1.7.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
+	<classpathentry kind="var" path="M2_REPO/asm/asm/2.2.3/asm-2.2.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/asm/asm-analysis/2.2.3/asm-analysis-2.2.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/asm/asm-tree/2.2.3/asm-tree-2.2.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/asm/asm-util/2.2.3/asm-util-2.2.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.2/commons-codec-1.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-httpclient/commons-httpclient/3.1/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-net/commons-net/2.0/commons-net-2.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-vfs/commons-vfs/1.0/commons-vfs-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/fastfile/fastfile/1.0/fastfile-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/l2fprod/fontchooser/1.0/fontchooser-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/codehaus/groovy/groovy/1.6-RC-2/groovy-1.6-RC-2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/h2database/h2/1.1.107/h2-1.1.107.jar"/>
+	<classpathentry kind="var" path="M2_REPO/nullfish/html-table-panel/1.1/html-table-panel-1.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/innosystec/java-unrar/0.2/java-unrar-0.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/samba/jcifs/jcifs/1.2.19/jcifs-1.2.19.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jdom/jdom/1.1/jdom-1.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/javazoom/jlayer/1.0/jlayer-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jlha/jlha/1.0/jlha-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jline/jline/0.9.94/jline-0.9.94.jar"/>
+	<classpathentry kind="var" path="M2_REPO/monazilla/jmigemo/0.1/jmigemo-0.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/mozilla/juniversalchardet/1.0.2/juniversalchardet-1.0.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/mac-dummy/mac-dummy/1.0/mac-dummy-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/oro/oro/2.0.8/oro-2.0.8.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/filefish"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
