--- a/trunk/trunk/src/main/resources/label.properties
+++ b/trunk/trunk/src/main/resources/label.properties
@@ -26,6 +26,15 @@ title_rename=jFD2 - Rename
 title_pack=jFD2 - Pack
 title_unpack=jFD2 - Unpack
 title_incremental_search=jFD2 - Incremental Search
+title_copy=jFD2 - Copy
+title_move=jFD2 - Move
+title_mkdir=jFD2 - Mkdir
+title_newfile=jFD2 - New File
+title_delete=jFD2 - Delete
+title_find=jFD2 - Find
+title_grep=jFD2 - Grep
+title_logdsk=jFD2 - Logical Disk
+title_shell=jFD2 - Shell
 
 copy_new_name=Rename and copy
 copy_if_newer=Overwrite if newer
@@ -324,3 +333,5 @@ attribute=File Attribute
 clean_tag_db=Tag Database Cleaning
 
 text_viewer=Text Viewer
+
+delete_ok_default=Selects the OK button in deleting by default.
