--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -4,7 +4,7 @@
   <groupId>nullfish</groupId>
   <artifactId>jfd2</artifactId>
   <packaging>jar</packaging>
-  <version>b19</version>
+  <version>1.00</version>
   <name>jfd2</name>
   <url>http://maven.apache.org</url>
   
