--- a/trunk/trunk/src/main/resources/label.properties
+++ b/trunk/trunk/src/main/resources/label.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 beta19 by Shunji.Y >>
+title=<< jFD2 1.00 by Shunji.Y >>
 
 ok=OK
 cancel=Cancel
@@ -335,3 +335,7 @@ clean_tag_db=Tag Database Cleaning
 text_viewer=Text Viewer
 
 delete_ok_default=Selects the OK button in deleting by default.
+
+go_parent_cursor=Goes to the parent directory using cursor right and left key.
+pane_change_cursor=Changes the active pane using cursor right and left key.
+zip_password=Password for a ZIP file
