--- a/trunk/trunk/src/main/resources/message.properties
+++ b/trunk/trunk/src/main/resources/message.properties
@@ -63,3 +63,4 @@ message_tag_find=Input a tag name to find.('*' is wild-card)
 input_new_tag=Input tag name
 message_clean_tag_db=Cleaning the file tag database and remove unneccessary tags.
 message_clean_tag_db_finished=Finishe..
+input_extension=Input an extension.
