拡張子による表示色変更機能追加。

--- a/trunk/src/main/resources/label.properties
+++ b/trunk/src/main/resources/label.properties
@@ -339,3 +339,5 @@ delete_ok_default=Selects the OK button in deleting by default.
 go_parent_cursor=Goes to the parent directory using cursor right and left key.
 pane_change_cursor=Changes the active pane using cursor right and left key.
 zip_password=Password for a ZIP file
+
+extension_color=Extension color
