--- a/trunk/src/main/resources/label.properties
+++ b/trunk/src/main/resources/label.properties
@@ -1,4 +1,4 @@
-title=<< jFD2 1.00 by Shunji.Y >>
+title=<< jFD2 1.01 by Shunji.Y >>
 
 ok=OK
 cancel=Cancel
@@ -104,6 +104,7 @@ move=Move
 copy_current_dir=Copy current directory name
 shell=Shell
 app_shell=Shell for applications
+open_dir_command=Command to open directories
 execute_menu=Execute
 execute=Execute a file
 remote_execute=Execute remote file in local
