--- a/trunk/trunk/src/main/resources/label.properties
+++ b/trunk/trunk/src/main/resources/label.properties
@@ -129,6 +129,7 @@ appearance=Appearance
 font=Font
 font_sample=ABCabc123
 modify=Change
+dialog_font=Dialog font
 read_only=Read Only
 sub_directory=Sub Directory
 message=Message
