クラスパス機能の改善、Groovyシェルの変更

--- a/trunk/src/main/resources/label.properties
+++ b/trunk/src/main/resources/label.properties
@@ -150,6 +150,7 @@ editor=Editor
 script_dir=Script files directory
 plugin_dir=Plugin directory
 shortcut_dir=Shortcut directory
+lib_dir=Classpath directory
 temp_dir=Temporary directory
 user_conf_dir=User configulation directory
 path=Path
@@ -239,6 +240,7 @@ new_filename=New Name
 
 go_plugin_dir=Plugin Management
 go_script_dir=Script Management
+go_lib_dir=Classpath Management
 change_thumbnail_mode=Show or Hide thumbnails
 
 use_mac_metal=Uses Metal (Mac only. Needs restart)
