英単語のtypoを修正

--- a/trunk/src/main/resources/label.properties
+++ b/trunk/src/main/resources/label.properties
@@ -152,7 +152,7 @@ plugin_dir=Plugin directory
 shortcut_dir=Shortcut directory
 lib_dir=Classpath directory
 temp_dir=Temporary directory
-user_conf_dir=User configulation directory
+user_conf_dir=User configuration directory
 path=Path
 path_notice=<html>Surround the file name with double quart if the file name contains spaces.<br>For example:<br>c:\\Program Files\\XXXEditor\\xxxeditor.exe<br>\u3000\u3000\u3000should be<br>"c:\\Program Files\\XXXEditor\\xxxeditor.exe"</html>
 shell_notice=<html>$C : The command<br>$Q : The command with double quart.<br>$CQ : The command with double quart(when the command contains a space)<br>Each lines are executed as independent elements.</html>
@@ -202,7 +202,7 @@ sort_reverse=Reverse sort order
 change_split=Change sprit direction
 next_tab=Select the next tab
 prev_tab=Select the prev tab
-focus_oponent=Select the oponent tab
+focus_opponent=Select the opponent tab
 next_frame=Select the next window
 extension_mapper=Extension mappping command
 
